--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,6 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +12,91 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.banner-card{
+  background-color: white;
+  width: 100vw;
+}
+.banner-img{
+  height: 70vh;
+  width: 100%;
+}
+.banner-title{
+  position: absolute;
+  top: 55vh;
+  left: 5vw;
+  color: white;
+}
+.banner-text{
+  position:absolute;
+  color:white;
+  top:60vh;
+  left:5vw;
+  margin-right: 5vw;
+  /* overflow: hidden; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.movies-list{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1rem;
+  justify-content: center;
+}
+.movie-card{
+  width:20vw;
+  margin:1rem;
+  color:white;
+  position: relative;
+}
+.movie-title{
+  position: absolute;
+  top:1rem;
+  left:1rem;
+}
+.movie-button{
+  position: absolute;
+  top:80%
+}
+.button-wrapper{
+  display: flex;
+  justify-content: center;
+}
+.pagination{
+  display: flex;
+  justify-content: center;
+}
+
+@media screen and (max-width:400px) {
+  .banner-card{
+    height: 25vh;
   }
-  to {
-    transform: rotate(360deg);
+  .banner-img{
+    height:30vh;
   }
+
+  .banner-title{
+    top:10vh;
+    left:5vw;
+  }
+
+  .banner-text{
+    top:15vh;
+    left:5vw;
+  }
+  /* .movie-card{
+    width: 40vw;
+    margin: 0.1rem;
+  }
+  .movie-button{
+    width: 80%;
+  }
+  .movie-img{
+    width: 40vw;
+  } */
+}
+
+.favs-list{
+  padding: 3rem;
+}
+.favs-table{
+  padding: 3rem;
 }
